<resources>
    <string name="app_name">Movie I</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="user_rating">Rating : </string>
    <string name="release_date">Release Date: </string>
    <string name="fetching">fetching poster...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_trailers">Trailers:</string>
    <string name="title_reviews">Reviews:</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_sort">Set sorting preference</string>
    <string name="sort_popularity">Sort by popularity</string>
    <string name="sort_vote">Sort by rating</string>
    <string name="favrts">Show favourites</string>
    <string name="sort_popularity_val">popularity.desc</string>
    <string name="sort_vote_val">vote_average.desc</string>
    <string name="favrts_val">fav</string>
    <string name="user_pref">Preferences</string>
    <string name="addfav">Add to favorite</string>
    <string name="remFav">Remove from favorite</string>
    <string name="refresh">Refresh</string>
    <string name="action_share">Share</string>
</resources>
