<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abhisheksinha.listviewexample.DetailActivityFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:id = "@+id/detailTitle"
        android:gravity="center"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailTitle"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:gravity="start"
        android:id = "@+id/detailImage"
        android:padding="0dp"
        android:contentDescription="@string/fetching"

        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/favBtn"
            android:layout_weight="1"
            android:singleLine="false"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:layout_gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:text="Add to favourites"/>
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:id="@+id/synopsis"
        android:gravity="start"
        android:padding="10dp"
        style ="@style/Base.TextAppearance.AppCompat.Body1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/synopsis"
        android:id="@+id/user_rating_title"
        android:padding="10dp"
        android:gravity="start"
        android:text="@string/user_rating"
        style="@style/Base.TextAppearance.AppCompat.Large"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/synopsis"
        android:layout_toRightOf="@id/user_rating_title"
        android:layout_toEndOf="@id/user_rating_title"
        android:id="@+id/user_rating_val"
        android:gravity="start"
        android:padding="10dp"
        style="@style/Base.TextAppearance.AppCompat.Large"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_rating_title"
        android:id="@+id/releaseDate"
        android:gravity="left"
        android:text="@string/release_date"
        android:padding="10dp"
        style="@style/Base.TextAppearance.AppCompat.Large"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_rating_title"
        android:layout_toRightOf="@id/releaseDate"
        android:layout_toEndOf="@id/releaseDate"
        android:id="@+id/releaseDateVal"
        android:padding="10dp"
        android:gravity="left"
        style="@style/Base.TextAppearance.AppCompat.Large"
        />
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/releaseDate"
            android:id="@+id/trailer"
            android:padding="10dp"
            android:gravity="left"
            style="@style/Base.TextAppearance.AppCompat.Large"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailer"
            android:id="@+id/review_id"
            android:padding="10dp"
            android:gravity="left"
            style="@style/Base.TextAppearance.AppCompat.Large"
            /> -->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/releaseDateVal"
            android:id="@+id/trailers">
        </ListView>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailers"
            android:id="@+id/reviews"></ListView>
    </RelativeLayout>
</ScrollView>
