<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abhisheksinha.listviewexample.DetailActivityFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:id = "@+id/detailTitle"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailTitle"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:id = "@+id/detailImage"
                android:padding="0dp"
                android:contentDescription="@string/fetching"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/favBtn"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:layout_gravity="top"
                    android:layout_margin="20dp"
                    style="@style/Base.TextAppearance.AppCompat.Button"
                    android:text="Add to favourites"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_rating_val"
                    android:text="this is test"
                    android:gravity="start"
                    android:padding="10dp"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/releaseDateVal"
                    android:padding="10dp"
                    android:gravity="left"
                    android:text="this is test date"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/linearLayout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:id="@+id/synopsis"
                android:gravity="start"
                android:padding="10dp"
                style ="@style/Base.TextAppearance.AppCompat.Body1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/title_trailers"
                android:padding="5dp"
                style="@style/Base.TextAppearance.AppCompat.Large"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trailers"

                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="5dp"
                >
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/review_title"
                android:gravity="left"
                android:text="@string/title_reviews"
                android:padding="10dp"
                style="@style/Base.TextAppearance.AppCompat.Large"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviews"

                android:layout_margin="5dp"
                android:padding="5dp"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:id="@+id/synopsis"
            android:gravity="start"
            android:padding="10dp"
            style ="@style/Base.TextAppearance.AppCompat.Body1"
            /> -->



    </RelativeLayout>
</ScrollView>
